namespace AvansDevops.DevOps;

public interface IPipelineBuilder
{

    public Pipeline Build();

}